# BD

./: README.md  pyproject.toml
data/: dev.csv  test.csv  training.csv
src/: C1.ipynb  C2.ipynb  Kmeans.ipynb  MLP2.ipynb  best_model.ipynb  numerical_features_summary.csv  random forest.ipynb  svm copy.ipynb  svm.ipynb  t1.ipynb
