[tool.poetry]
name = "bd"
version = "0.1.0"
description = ""
authors = ["edoelas <miego.cvcv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "5.9.3"
pyspark = "^3.5.1"
jupyter = "^1.0.0"
pandas = "^2.2.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
